tests/snapshots/integration__integration_tests__post_start_commands__post_start_separate_logs.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpmZPSHR/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].feature[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell[0m
🔄 [36mRunning post-start: [1mtask1[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'TASK1_OUTPUT'[0m[0m
🔄 [36mRunning post-start: [1mtask2[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'TASK2_OUTPUT'[0m[0m
🔄 [36mRunning post-start: [1mtask3[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'TASK3_OUTPUT'[0m[0m

----- stderr -----
